<resources>
    <string name="app_name">EcoNetwork</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">События</string>
    <string name="title_notifications">Задания</string>
    <string name="title__shop">Магазин</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Номер телефона или Никнейм</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Далее</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Пароль должен быть >6 символов</string>
    <string name="login_failed">"Login failed"</string>
    <string name="youtasks">Ваши задания</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="card_title">Расчистить двор</string>
    <string name="notifications">Уведомления</string>
    <string name="messeges">Сообщения</string>
    <string name="event">Мероприятия</string>
    <string name="news">Новости</string>
    <string name="liders">Эко-лидеры вашего города</string>
    <string name="news1">Шесть человек нашли в горах</string>
    <string name="news1dis">В проходном ущелье спасатели нашли...</string>
    <string name="news2">Какая погода ждет казахстанцев</string>
    <string name="news2dis">О погоде в Казахстане на 28-30 января</string>
    <string name="proname1">Ecology Pro</string>
    <string name="proscore1">15 220</string>
    <string name="proscore3">14 039</string>
    <string name="proname3">Alexa12</string>
    <string name="proscore2">15 165</string>
    <string name="proname2">Plustic Hunter</string>
    <string name="education">Обучение</string>
    <string name="edu_video_time">5:32</string>
    <string name="task_name">Название задания</string>
    <string name="task_disc">описание задания</string>
    <string name="image_notebook_discription">notebook_imge</string>
    <string name="shop_menu">Магазин</string>
    <string name="profile_menu">Профиль</string>
    <string name="our_partners">Наши партнеры</string>
    <string name="percent_15">Теперь вы можете приобрести эко-товары со скидкой 15%</string>
    <string name="entery">Вход</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="dont_reg">Не зарегестрированы?</string>
    <string name="registration">Регистрация</string>
    <string name="tel_number">Номер телефона</string>
    <string name="username">Имя пользователя</string>
    <string name="rep_password">Повторить пароль</string>
    <string name="regist_already">Уже зарегестрированы?</string>
    <string name="password_mistake">Пароли не совпадают!</string>
    <string name="restore_password">Востановить</string>
    <string name="restore_pass_header">Восстановление пароля</string>
    <string name="verification_text">Мы отправили на ваш номер +7 777 777 77 77 проверочный код</string>
    <string name="verification_header">Потвердите свой номер</string>
    <string name="ver_but_header">Отправить снова</string>
    <string name="username_profile">@Username</string>
    <string name="points_count_profile">13</string>
    <string name="name_surname">Name Surname</string>
    <string name="adres_profile">Adress</string>
    <string name="e_mail_profile">E-mail</string>
    <string name="statistic">Статистика</string>
    <string name="report">Отчет</string>
    <string name="your_coins">Ваши баллы</string>
    <string name="tech_support">Тех поддержка</string>
    <string name="referal_link">Referal link</string>
    <string name="city_item">Алматы</string>
    <string name="events_text_button">События</string>
    <string name="news_header_button">Новости</string>
    <string name="events_item_header">Посадка деревьев в Дендрарии</string>
    <string name="events_item_disc">Завтра состоятся районное мероприятие - посадка саженцев в ботаническом саду. Спонсор мероприятия - компания Eco Network в тондеме с Magnum Cash &amp; Carry. Приглашайте друзей, получайте баллы!</string>
    <string name="tags_event_item">#Алматы #Бостандыкский район #Тимирязева #Бостандыкский район #Ботанический сад #Экология #Озеленение #26.02.2021 #13:30</string>
    <string name="exept_button">Принять</string>
    <string name="news_items_header">Шесть человек спасли в горах</string>
    <string name="my_task">Мои задания</string>
    <string name="available_tasks_main">Доступные</string>
    <string name="promo_text">Акции</string>
    <string name="sales_text">Магазин</string>
    <string name="task_topbar">Задание</string>
    <string name="task_activity_header">Расчистить двор</string>
    <string name="cluster_tap_message">Расчистить двор</string>
    <string name="taskactivity_body">Приглашаем всех на субботник в нашем дворе. Зовите соседей не забудьте использовать рефералочки.</string>
    <string name="taskactivity_tags">#Алматы #Бостандыкский район #Тимирязева #Ботанический сад #Сортировка #Сбор мусора #15.02.2021 #11:52</string>
    <string name="event_topbar">Мероприятие</string>
    <string name="map_header">Карта</string>
    <string name="title_activity_video">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sms_text_verify">введите смс код</string>
    <string name="task_startdate_text">Дата начала задания</string>
    <string name="text_date_taskstart">12.04.2021</string>
    <string name="task_start_time">Время начала задания</string>
    <string name="task_start_time_body">12:00</string>
    <string name="news_mainparagraph">Спасатели Республиканского оперативно-спасательного отряда МЧС РК за сутки спасли шесть человек в горах, передает Today.kz</string>
    <string name="news_mainp_text">На пульт оперативно дежурного спасателя РОСО поступило сообщение о том,
    что в Проходном ущелье близ радонового источника девушка нуждается в срочной медицинской помощи.
    Со слов заявителя, туристка подвернула ногу, самостоятельно спуститься не получается, боль усиливается.
    На место происшествия выехади семь спасателей, кинологический расчет. Несмотря на наступившую темноту,
    спасателям удалось обнаружить пострадавшую в течении часа с момента выезда.
    Девушка находилась на высоте 1800 метров над уровнем моря - рассказали в ведомстве. /n
    Осмотрев девушки на месте, спасатель медик поставил предварительный диагноз вывих голеностопа. Также у нее наблюдалось перерохлождение.</string>
    <string name="close_button">Закрыть</string>
    <string name="news_activity_header">Новость</string>
</resources>
