<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_fluid"
        android:title="@string/title_dashboard"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_flag"
        android:title="@string/title_notifications"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/shop_menu"
        android:enabled="true"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile_menu"
        android:enabled="true"/>

</menu>
