<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegistActivity">

    <ImageView
        android:id="@+id/imageView_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_reg_new" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/registration"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginBottom="-40dp"
                android:layout_height="1000dp"
                android:layout_alignParentStart="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="1dp"
                app:cardForegroundColor="@color/colorWhite"
                android:alpha=".7"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp"
                    app:cardBackgroundColor="@color/colorWhite">

                    <EditText
                        android:id="@+id/username_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"                       />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp"
                    app:cardBackgroundColor="@color/colorWhite">

                    <EditText
                        android:id="@+id/userphone_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:hint="@string/tel_number"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp"
                    app:cardBackgroundColor="@color/colorWhite">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp"
                    app:cardBackgroundColor="@color/colorWhite">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true">


                        <EditText
                            android:id="@+id/password_reg_rep"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:hint="@string/rep_password"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="true"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/wrong_pass"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/password_mistake"
                            android:textColor="@color/colorAccent"
                            android:gravity="start"
                            android:textStyle="bold"
                            android:visibility="invisible"/>

                    </LinearLayout>




                </androidx.cardview.widget.CardView>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom">

                    <Button
                        android:id="@+id/regist"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/back_button"
                        android:enabled="false"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/regist_already"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/textmainHeader2"
                        android:layout_marginBottom="24dp"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>