<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_sms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_reg_new" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/verification_header"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginBottom="-40dp"
                android:layout_height="1000dp"
                android:layout_alignParentStart="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="1dp"
                app:cardForegroundColor="@color/colorWhite"
                android:alpha=".7"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <TextView
                    android:id="@+id/text_sms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_text"
                    android:textColor="@color/textmainHeader2"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:layout_margin="24dp"
                    android:textStyle="bold"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp"
                    app:cardBackgroundColor="@color/colorWhite">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/sms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:hint="@string/sms_text_verify"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:selectAllOnFocus="true"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/button_sms"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"
                    android:background="@drawable/back_button"
                    android:enabled="true"
                    android:text="@string/ver_but_header"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>