<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_reg_new" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="44dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_new"
            app:tint="@color/colorWhite"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginBottom="-40dp"
            android:layout_height="1000dp"
            android:layout_alignParentStart="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="1dp"
            app:cardForegroundColor="@color/colorWhite"
            android:alpha=".7"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entery"
                    android:textColor="@color/textmainHeader2"
                    android:layout_margin="24dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp"
                    app:cardBackgroundColor="@color/colorWhite">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"                       />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp"
                    app:cardBackgroundColor="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/password_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorAccent"
                    android:layout_marginEnd="24dp"
                    android:gravity="end"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/login_but"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"
                    android:background="@drawable/back_button"
                    android:enabled="false"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/colorWhite"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_reg"
                        android:textColor="@color/textmainHeader2"
                        android:textSize="16sp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:layout_marginBottom="24dp"
                        android:textStyle="bold"/>


                </RelativeLayout>



            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>